<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.homework.noteproject.features.fragments.editNote.EditNoteViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.homework.noteproject.features.fragments.editNote.EditNoteFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/ic_back"
                    app:menu="@menu/notes_appbar_menu"
                    app:title="@string/notes">

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <EditText
                android:id="@+id/titleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appbar"
                android:text="@={viewModel.titleText}"
                android:hint="@string/enter_title"
                android:background="@drawable/shape"
                android:padding="10dp"
                android:layout_marginTop="16dp"/>


            <EditText
                android:id="@+id/descriptionText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:hint="@string/enter_description"
                android:inputType="text"
                android:text="@={viewModel.descriptionText}"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText"
                android:background="@drawable/shape"
                android:padding="10dp"
                android:gravity="top"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>
